change the token in the doc
