# routes/offers.js
@@ -8,7 +8,7 @@ router.get('/', catchErrors(getOffers)
 	/*
 		#swagger.tags = ['Offers']
 		#swagger.security = [{
-			"bearerAuth": []
+			"ApiTokenAuth": []
 		}]
 		#swagger.responses[200] = { description: 'Return all offers' }
 		#swagger.responses[401] = { description: 'Error : unauthorized access' }
@@ -18,7 +18,7 @@ router.get('/:id', catchErrors(getOffer)
 	/*
 		#swagger.tags = ['Offers']
 		#swagger.security = [{
-			"bearerAuth": []
+			"ApiTokenAuth": []
 		}]
 		#swagger.responses[200] = { description: 'Create a new offer' }
 		#swagger.responses[401] = { description: 'Error : unauthorized access' }
@@ -28,7 +28,7 @@ router.post('/', catchErrors(addOffer)
 	/*
 		#swagger.tags = ['Offers']
 		#swagger.security = [{
-			"bearerAuth": []
+			"ApiTokenAuth": []
 		}]
 		#swagger.requestBody = {
 			required: true,
@@ -48,7 +48,7 @@ router.patch('/:id', catchErrors(updateOffer)
 	/*
 		#swagger.tags = ['Offers']
 		#swagger.security = [{
-			"bearerAuth": []
+			"ApiTokenAuth": []
 		}]
 		#swagger.responses[200] = { description: 'Update the offer with the param ID' }
 		#swagger.responses[401] = { description: 'Error : unauthorized access' }
@@ -58,7 +58,7 @@ router.delete('/:id', catchErrors(deleteOffer)
 	/*
 		#swagger.tags = ['Offers']
 		#swagger.security = [{
-			"bearerAuth": []
+			"ApiTokenAuth": []
 		}]
 		#swagger.responses[200] = { description: 'Delete the offer with the param ID' }
 		#swagger.responses[401] = { description: 'Error : unauthorized access' }
